monitoring/templates/grafana/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
spec:
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
    - Ingress
  ingress:
    - from:
        # Restrict to ingress
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        # Also allow operator
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana-operator-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana-operator
              app.kubernetes.io/instance: grafana-operator
        # Also allow metrics
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              operator.prometheus.io/name: prometheus
      ports:
        - port: 3000
          protocol: TCP
